@@ -3,6 +3,11 @@
     * BAIL_OUT works inside a subtest. (Larry Leszczynski) [github #138]
     * subtests now work with threads turned on. [github #145]
 
+    Misc
+    * Test::More, Test::Simple and Test::Builder::Module now require
+      a minimum version of Test::Builder.  This avoids Test::More and
+      Test::Builder from getting out of sync. [github #89]
+
 
 0.98  Wed, 23 Feb 2011 14:38:02 +1100
     Bug Fixes
